Day-03/K8sDeploymentDemo/namespace.yaml
# namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: deployment-lab
