Day-03/K8sDeploymentDemo/deployment-base.yaml
# deployment-base.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-api
  namespace: deployment-lab
  labels:
    app: weather-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: weather-api
  template:
    metadata:
      labels:
        app: weather-api
        version: "1.0.0"
    spec:
      containers:
        - name: weather-api
          image: k8s-deployment-demo:1.0.0
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
