Day-03/K8sDeploymentDemo/deployment-blue.yaml
# deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-api-blue
  namespace: deployment-lab
  labels:
    app: weather-api-blue
spec:
  replicas: 3
  selector:
    matchLabels:
      app: weather-api-blue
  template:
    metadata:
      labels:
        app: weather-api-blue
        version: "1.0.0"
    spec:
      containers:
        - name: weather-api
          image: k8s-deployment-demo:1.0.0
          ports:
            - containerPort: 80
